# SDET-Python-Automation-Course-with-Playwright

./: main.py  pyproject.toml  test_pw_locators.py
pages/: playwright_page.py
tests/: test_get_by_label.py  test_get_by_role.py  test_get_by_text.py
utils/: logger.py
