[project]
name = "playwright-proj"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest>=9.0.3",
    "pytest-playwright>=0.7.2",
]

[dependency-groups]
dev = [
    "playwright>=1.58.0",
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
addopts = "--headed -s -v"